fix slider jump on mobile + add menu fixed

--- a/styles/scss/imports/_header.scss
+++ b/styles/scss/imports/_header.scss
@@ -1,10 +1,58 @@
 .header-container {
   position: relative;
   z-index: 1000;
+  height: 60px;
+
+  @media (min-width: 576px) {
+    height: 80px;
+  }
+
+  &-wrapper {
+    transition: all 0.6s ease;
+    width: 100%;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 60px;
+      left: 0;
+      top: 0;
+      border-bottom: 1px solid transparent;
+      background: rgb(0 0 0 / 0%);
+      border-color: rgba(255, 255, 255, 0.2);
+      background: rgb(0 0 0 / 33%);
+      -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+      backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+      transform: translate3d(0, -100%, 0);
+      z-index: -1;
+      transition: all 0.6s ease;
+
+      @media (min-width: 576px) {
+        height: 80px;
+      }
+    }
+
+    &.fixed {
+      position: fixed;
+
+      &::after {
+        transform: translate3d(0, 0, 0);
+      }
+    }
+  }
 }
+
 header {
   width: 100%;
-  height: 80px;
+  height: 60px;
+
+  @media (min-width: 576px) {
+    height: 80px;
+  }
 
   ul {
     display: flex;
