--- a/styles/scss/imports/_home.scss
+++ b/styles/scss/imports/_home.scss
@@ -1,9 +1,13 @@
 .home-container {
-  min-height: calc(100vh - 80px); //80 => header height
+  min-height: calc(100vh - 60px); //80 => header height
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+
+  @media (min-width: 576px) {
+    justify-content: center;
+    min-height: calc(100vh - 80px); //80 => header height
+  }
 
   .title {
     margin-top: -2vh;
